// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactionList should render left aligned ReactionList 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "height": 28,
          "zIndex": 10,
        },
        Object {
          "alignSelf": "flex-start",
          "left": -10,
        },
      ]
    }
    testID="reaction-list"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 24,
            "paddingHorizontal": 5,
            "zIndex": 1,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          testID="sad"
        >
          😔
        </Text>
        <Text
          testID="haha"
        >
          😂
        </Text>
        <Text
          testID="like"
        >
          👍
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {},
            Object {},
          ]
        }
      >
        5
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "top": -23,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/reactionlist/left-tail.png",
          }
        }
        style={
          Object {
            "height": 33,
            "width": 25,
          }
        }
      />
      <Image
        resizeMode="stretch"
        source={
          Object {
            "testUri": "../../../src/images/reactionlist/left-center.png",
          }
        }
        style={
          Object {
            "flex": 1,
            "height": 33,
          }
        }
      />
      <Image
        source={
          Object {
            "testUri": "../../../src/images/reactionlist/left-end.png",
          }
        }
        style={
          Object {
            "height": 33,
            "width": 14,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`ReactionList should render not visible ReactionList 1`] = `<View />`;

exports[`ReactionList should render right aligned ReactionList 1`] = `
<View>
  <View
    style={
      Array [
        Object {
          "height": 28,
          "zIndex": 10,
        },
        Object {
          "alignSelf": "flex-end",
          "right": -10,
        },
      ]
    }
    testID="reaction-list"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 24,
            "paddingHorizontal": 5,
            "zIndex": 1,
          },
          Object {},
        ]
      }
    >
      <View
        style={
          Object {
            "flexDirection": "row",
          }
        }
      >
        <Text
          testID="sad"
        >
          😔
        </Text>
        <Text
          testID="haha"
        >
          😂
        </Text>
        <Text
          testID="like"
        >
          👍
        </Text>
      </View>
      <Text
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {},
            Object {},
          ]
        }
      >
        5
      </Text>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "top": -23,
        }
      }
    >
      <Image
        source={
          Object {
            "testUri": "../../../src/images/reactionlist/right-end.png",
          }
        }
        style={
          Object {
            "height": 33,
            "width": 14,
          }
        }
      />
      <Image
        resizeMode="stretch"
        source={
          Object {
            "testUri": "../../../src/images/reactionlist/right-center.png",
          }
        }
        style={
          Object {
            "flex": 1,
            "height": 33,
          }
        }
      />
      <Image
        source={
          Object {
            "testUri": "../../../src/images/reactionlist/right-tail.png",
          }
        }
        style={
          Object {
            "height": 33,
            "width": 25,
          }
        }
      />
    </View>
  </View>
</View>
`;
